--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -20,39 +20,45 @@ const description = "All about me";
 		</header>
 
 		<section class="max-w-2xl">
-			<div class="space-y-8 leading-8">
-				<p>
-					I started out as a humble cooper in 17th-century
-					Venice—shaping barrels by hand, minding my business, and
-					occasionally overcharging pompous nobles. It was honest
-					work, until one delivery turned into a blood pact I don’t
-					fully remember. Next thing I knew, I was undead, unemployed,
-					and oddly nocturnal.
-				</p>
-				<p>
-					These days, I’m a full stack developer living in
-					Transylvania, coding after dark for DracEats, the world’s
-					leading blood delivery platform. I handle everything from
-					API design to user flows—though I still miss the smell of
-					fresh oak (less so the risk of splinters or exorcisms).
-				</p>
-				<p>
-					This blog is where I share my thoughts on tech, life as an
-					eternal night-shift worker, and surviving agile sprints with
-					werewolves. If that sounds useful—or at least mildly
-					cursed—you’re in the right place.
-				</p>
+			<div class="space-y-8 leading-8 text-base text-zinc-600 dark:text-zinc-400">
+            <p>
+              Howdy! Thanks for stopping by. I’m Brian and I’ve been doing technology
+              things since <a href="https://en.wikipedia.org/wiki/Acoustic_coupler">acoustic
+                modem couplers</a> were a thing. I love Open Source and exploring different programming languages.
+              Some highlights about me and my activities:
+            </p>
+            <p>
+              <b>Army Veteran:</b> Bradley Fighting Vehicle Gunner, Infantry, 1st Armored Division.
+            </p>
+            <p>
+              <b>Father of <s>four</s> <s>five</s> six</b> with <s>19</s> <s>21</s> 22 years difference between oldest and youngest child.
+            </p>
+            <p>
+              <b>Co-founded GopherCon</b> <a href="https://gophercon.com">the largest conference for Go developers</a>.
+            </p>
+            <p>
+              <b>Co-authored</b> <a href="https://www.amazon.com/Go-Action-William-Kennedy/dp/1617291781">Go In Action</a> for Manning Publishing.
+            </p>
+            <p>
+              <b>Co-wrote</b> Skynet and SkyDNS with Erik St. Martin, which was eventually morphed into the DNS service discovery that powers Kubernetes.
+            </p>
+            <p>
+              <b>Contributed</b> to the largest projects that power the Internet. Go, Kubernetes, Etcd, and so many more.
+            </p>
+            <p>
+              I love Open Source, learning in public, and sharing what I learn with others.
+            </p>
 			</div>
 
 			<div
 				class="sm:flex sm:items-center sm:justify-between space-y-4 sm:space-y-0 my-10"
 			>
 				<a
-					href="mailto:lorenzo@dilumenero.dev"
+					href="mailto:me@brian.dev"
 					class="flex items-center space-x-1 hover:text-primary-500"
 				>
 					<Icon name="heroicons:envelope" class="size-5" />
-					<span>lorenzo@dilumenero.dev</span>
+					<span>me@brian.dev</span>
 				</a>
 				<div class="flex items-center space-x-4">
 					<Social />
