--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,9 @@ const currentPath = Astro.url.pathname;
 
 const navItems = [
 	{ href: "/", text: "Home", active: currentPath === "/" },
-	{ href: "/blog", text: "Blog", active: currentPath.startsWith("/blog") },
+	{ href: "/articles", text: "Articles", active: currentPath.startsWith("/articles") },
+	{ href: "/projects", text: "Projects", active: currentPath.startsWith("/projects") },
+	{ href: "/now", text: "Now", active: currentPath.startsWith("/now") },
 	{ href: "/about", text: "About", active: currentPath.startsWith("/about") },
 ];
 ---
@@ -18,9 +20,9 @@ const navItems = [
 	>
 		<div
 			class="bg-white w-full md:w-2xl mx-auto flex h-12 items-center justify-between
-			ring-1 ring-slate-300 mt-10 px-4 rounded-lg shadow dark:bg-slate-800 dark:ring-white/10 dark:text-slate-200"
+			ring-1 ring-zinc-300 mt-10 px-4 rounded-2xl shadow dark:bg-zinc-800 dark:ring-white/10 dark:text-zinc-200"
 		>
-			<a href="/" class="font-headings font-black text-3xl">SoBasic</a>
+			<a href="/" class="font-headings font-black text-2xl">brian.dev</a>
 
 			<div class="flex items-center h-full">
 				<nav class="hidden md:block h-full">
@@ -30,11 +32,11 @@ const navItems = [
 								<li>
 									<a
 										href={item.href}
-										class={`relative flex items-center h-full hover:text-primary-500 transition ${item.active ? "text-primary-500" : ""}`}
+										class={`relative flex text-sm items-center h-full hover:text-primary-500 transition ${item.active ? "text-primary-500" : ""}`}
 									>
 										{item.text}
 										{item.active && (
-											<span class="absolute inset-x-0 -bottom-px h-px bg-primary-500" />
+											<span class="absolute inset-x-1 -bottom-px h-px bg-gradient-to-r from-teal-500/0 via-teal-500/40 to-teal-500/0 dark:from-teal-400/0 dark:via-teal-400/40 dark:to-teal-400/0"></span>
 										)}
 									</a>
 								</li>
@@ -69,7 +71,7 @@ const navItems = [
 
 	<div
 		data-mobile-nav-element
-		class="hidden fixed z-60 inset-x-4 top-8 p-6 bg-white dark:bg-slate-800 dark:ring-white/10 dark:text-slate-200 shadow-md rounded-2xl transition starting:opacity-0 starting:scale-85 starting:-translate-y-8"
+		class="hidden fixed z-60 inset-x-4 top-8 p-6 bg-white dark:bg-zinc-800 dark:ring-white/10 dark:text-zinc-200 shadow-md rounded-2xl transition starting:opacity-0 starting:scale-85 starting:-translate-y-8"
 	>
 		<div class="flex justify-end">
 			<button data-close-mobile-nav aria-label="Close main navigation">
@@ -77,7 +79,7 @@ const navItems = [
 			</button>
 		</div>
 		<nav>
-			<ul class="divide-y divide-slate-200 dark:divide-slate-600">
+			<ul class="divide-y divide-zinc-200 dark:divide-zinc-600">
 				{
 					navItems.map((item) => (
 						<li>
