--- a/src/components/NewsletterForm.astro
+++ b/src/components/NewsletterForm.astro
@@ -3,14 +3,14 @@ import { Icon } from "astro-icon/components";
 ---
 
 <div
-	class="ring-1 ring-slate-300 px-8 py-6 rounded-lg shadow dark:bg-slate-800 dark:ring-white/10 dark:text-slate-200 md:flex md:space-x-8 md:items-center space-y-6 md:space-y-0"
+	class="ring-1 ring-zinc-300 px-8 py-6 rounded-lg shadow dark:bg-zinc-800 dark:ring-white/10 dark:text-zinc-200 md:flex md:space-x-8 md:items-center space-y-6 md:space-y-0"
 >
 	<div class="flex-1">
 		<h2 class="flex items-center space-x-2">
 			<Icon name="heroicons:envelope" />
 			<span class="font-semibold">Subscribe to the Bloodletter</span>
 		</h2>
-		<p class="leading-7 text-slate-700 dark:text-slate-300 text-sm mt-2">
+		<p class="leading-7 text-zinc-700 dark:text-zinc-300 text-sm mt-2">
 			No garlic, no spam—just bite-sized brilliance once or twice a moon.
 		</p>
 	</div>
@@ -20,11 +20,11 @@ import { Icon } from "astro-icon/components";
 				type="email"
 				placeholder="vlad@example.com"
 				required
-				class="w-full appearance-none rounded-md bg-white px-3 py-2 shadow-md shadow-slate-800/5 outline outline-slate-900/10 placeholder:text-slate-400 focus:ring-4 focus:ring-primary-500/10 focus:outline-primary-500 sm:text-sm dark:bg-slate-700/[0.15] dark:text-slate-200 dark:outline-slate-700 dark:placeholder:text-slate-500 dark:focus:ring-primary-400/10 dark:focus:outline-primary-400"
+				class="w-full appearance-none rounded-md bg-white px-3 py-2 shadow-md shadow-zinc-800/5 outline outline-zinc-900/10 placeholder:text-zinc-400 focus:ring-4 focus:ring-primary-500/10 focus:outline-primary-500 sm:text-sm dark:bg-zinc-700/[0.15] dark:text-zinc-200 dark:outline-zinc-700 dark:placeholder:text-zinc-500 dark:focus:ring-primary-400/10 dark:focus:outline-primary-400"
 			/>
 
 			<button
-				class="rounded-md py-2 px-3 text-sm outline-offset-2 transition active:transition-none bg-slate-800 font-semibold text-slate-100 hover:bg-primary-500 active:bg-slate-800 active:text-slate-100/70 dark:bg-slate-700 dark:active:bg-slate-700 dark:active:text-slate-100/70 ml-4 flex-none"
+				class="rounded-md py-2 px-3 text-sm outline-offset-2 transition active:transition-none bg-zinc-800 font-semibold text-zinc-100 hover:bg-primary-500 active:bg-zinc-800 active:text-zinc-100/70 dark:bg-zinc-700 dark:active:bg-zinc-700 dark:active:text-zinc-100/70 ml-4 flex-none"
 			>
 				Join
 			</button>
