--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -19,12 +19,12 @@ const { title, description, pubDate, updatedDate, image } = Astro.props;
 		/>
 	</head>
 	<body
-		class="flex h-full bg-slate-50 text-slate-900 dark:bg-black dark:text-white"
+		class="flex h-full bg-zinc-50 text-zinc-700 dark:bg-black dark:text-white"
 	>
 		<div class="fixed inset-0 flex justify-center sm:px-8">
 			<div class="flex w-full max-w-7xl lg:px-8">
 				<div
-					class="w-full bg-white ring-1 ring-slate-100 dark:bg-slate-900 dark:ring-slate-300/20"
+					class="w-full bg-white ring-1 ring-zinc-100 dark:bg-zinc-900 dark:ring-zinc-300/20"
 				>
 				</div>
 			</div>
